--- a/app/index.html
+++ b/app/index.html
@@ -5,104 +5,31 @@
   <meta name="viewport" content="width=device-width,initial-scale=1,viewport-fit=cover" />
   <title>RControl Factory</title>
   <meta name="theme-color" content="#0b1020" />
+
+  <!-- importante: base relativo pra funcionar em /app/ -->
   <base href="./" />
+
   <link rel="manifest" href="./manifest.json" />
   <link rel="stylesheet" href="./styles.css" />
 </head>
+
 <body>
   <noscript>Ative o JavaScript para usar o app.</noscript>
 
-  <div id="app">
+  <div id="rcfRoot">
     <div style="padding:14px;font-family:system-ui">Carregando…</div>
   </div>
 
+  <!-- app principal -->
+  <script src="./app.js" defer></script>
+
+  <!-- SW (scope ./ para PWA em /app/) -->
   <script>
-    (function () {
-      function rcfLog(type, msg) {
-        try {
-          if (window.RCF_LOGGER && typeof window.RCF_LOGGER.push === "function") {
-            window.RCF_LOGGER.push(type, msg);
-          } else {
-            console.log("[BOOT]", type, msg);
-          }
-        } catch {}
+    try {
+      if ("serviceWorker" in navigator) {
+        navigator.serviceWorker.register("./sw.js", { scope: "./" });
       }
-
-      // ✅ ROOT dinâmico (não quebra se abrir por / ou /app/)
-      function detectRoot() {
-        var p = (location.pathname || "");
-        // se estiver em /app/... => root = /app
-        if (p === "/app" || p.indexOf("/app/") === 0) return "/app";
-        // senão, tenta root vazio (caso você tenha deploy em /)
-        return "";
-      }
-
-      function loadScript(src) {
-        return new Promise(function (resolve, reject) {
-          var s = document.createElement("script");
-          s.src = src;
-          s.async = false;
-          s.onload = function () { resolve(src); };
-          s.onerror = function () { reject(new Error("fail " + src)); };
-          document.head.appendChild(s);
-        });
-      }
-
-      async function loadAny(paths, name) {
-        var lastErr = null;
-        for (var i = 0; i < paths.length; i++) {
-          var src = paths[i];
-          try {
-            var okSrc = await loadScript(src);
-            rcfLog("boot", "module loaded ✅ " + name + " ← " + okSrc);
-            return okSrc;
-          } catch (e) {
-            lastErr = e;
-            rcfLog("warn", "module missing ❌ " + name + " tentou: " + src);
-          }
-        }
-        throw lastErr || new Error("all paths failed: " + name);
-      }
-
-      async function boot() {
-        rcfLog("boot", "index boot: starting module loader...");
-        var ROOT = detectRoot();
-        rcfLog("boot", "detected ROOT=" + (ROOT || "(vazio)"));
-
-        var modules = [
-          { name: "github_sync",       paths: [ROOT + "/js/core/github_sync.js", "./js/core/github_sync.js"] },
-          { name: "vfs_overrides",     paths: [ROOT + "/js/core/vfs_overrides.js", "./js/core/vfs_overrides.js"] },
-          { name: "mother_selfupdate", paths: [ROOT + "/js/core/mother_selfupdate.js", "./js/core/mother_selfupdate.js"] },
-          { name: "injector",          paths: [ROOT + "/js/core/injector.js", "./js/core/injector.js"] },
-          { name: "settings_cleanup",  paths: [ROOT + "/js/core/settings_cleanup.js", "./js/core/settings_cleanup.js"] },
-          { name: "admin_ui_github",   paths: [ROOT + "/js/admin.github.js", "./js/admin.github.js"] },
-        ];
-
-        for (var j = 0; j < modules.length; j++) {
-          var m = modules[j];
-          try { await loadAny(m.paths, m.name); }
-          catch (e) { rcfLog("warn", "module missing ❌ " + m.name + " :: " + (e && e.message ? e.message : e)); }
-        }
-
-        try {
-          await loadAny([ROOT + "/app.js", "./app.js"], "app.js");
-        } catch (e) {
-          rcfLog("err", "app.js missing/crash ❌ " + (e && e.message ? e.message : e));
-        }
-
-        try {
-          if ("serviceWorker" in navigator) {
-            var swUrl = (ROOT ? ROOT + "/sw.js" : "./sw.js");
-            var scope = (ROOT ? ROOT + "/" : "./");
-            navigator.serviceWorker.register(swUrl, { scope: scope })
-              .then(function () { rcfLog("boot", "sw register: ok"); })
-              .catch(function () { rcfLog("warn", "sw register: fail/ignored"); });
-          }
-        } catch {}
-      }
-
-      boot();
-    })();
+    } catch {}
   </script>
 </body>
 </html>
