--- a/app/index.html
+++ b/app/index.html
@@ -6,30 +6,133 @@
   <title>RControl Factory</title>
   <meta name="theme-color" content="#0b1020" />
 
-  <!-- importante: base relativo pra funcionar em /app/ -->
+  <!-- ✅ importante: base relativo pra funcionar em /app/ -->
   <base href="./" />
 
   <link rel="manifest" href="./manifest.json" />
   <link rel="stylesheet" href="./styles.css" />
 </head>
-
 <body>
   <noscript>Ative o JavaScript para usar o app.</noscript>
 
-  <div id="rcfRoot">
+  <div id="app">
     <div style="padding:14px;font-family:system-ui">Carregando…</div>
   </div>
 
-  <!-- app principal -->
-  <script src="./app.js" defer></script>
+  <!-- ✅ BootPanel (sempre visível) -->
+  <div id="rcfBootPanel" style="
+    position:fixed; left:12px; right:12px; bottom:12px;
+    z-index:999999; padding:12px; border-radius:14px;
+    background:rgba(0,0,0,.55); color:#d7fbe2;
+    border:1px solid rgba(255,255,255,.10);
+    font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, 'Liberation Mono', monospace;
+    font-size:12px; line-height:1.35;
+    max-height:36vh; overflow:auto;">
+    <div style="display:flex; gap:8px; align-items:center; margin-bottom:8px;">
+      <div style="font-weight:800;">RCF BOOT</div>
+      <button id="rcfReloadBtn" style="
+        margin-left:auto; padding:6px 10px; border-radius:999px;
+        border:1px solid rgba(255,255,255,.15);
+        background:rgba(255,255,255,.08); color:#fff;">Reload</button>
+      <button id="rcfHideBtn" style="
+        padding:6px 10px; border-radius:999px;
+        border:1px solid rgba(255,255,255,.15);
+        background:rgba(255,255,255,.08); color:#fff;">Hide</button>
+    </div>
+    <pre id="rcfBootLog" style="margin:0; white-space:pre-wrap;">boot: init…</pre>
+  </div>
 
-  <!-- SW (scope ./ para PWA em /app/) -->
   <script>
-    try {
-      if ("serviceWorker" in navigator) {
-        navigator.serviceWorker.register("./sw.js", { scope: "./" });
+    (function () {
+      const out = document.getElementById("rcfBootLog");
+      function p(line){
+        try {
+          out.textContent += "\n" + line;
+          out.scrollTop = out.scrollHeight;
+        } catch {}
       }
-    } catch {}
+
+      // botões
+      try {
+        document.getElementById("rcfReloadBtn").onclick = () => location.reload();
+        document.getElementById("rcfHideBtn").onclick = () => {
+          const pan = document.getElementById("rcfBootPanel");
+          if (pan) pan.style.display = "none";
+        };
+      } catch {}
+
+      // logger global (compatível)
+      window.RCF_LOGGER = window.RCF_LOGGER || {
+        push(level, msg){
+          const line = "[" + level + "] " + msg;
+          p(line);
+          try { console.log(line); } catch {}
+        }
+      };
+
+      // pega erros que travam em “Carregando…”
+      window.addEventListener("error", (e) => {
+        const m = (e && (e.message || e.error?.message)) || "Erro desconhecido";
+        window.RCF_LOGGER.push("err", "GLOBAL_ERROR: " + m);
+      });
+      window.addEventListener("unhandledrejection", (e) => {
+        const m = e?.reason?.message || String(e?.reason || "Promise rejection");
+        window.RCF_LOGGER.push("err", "UNHANDLED_REJECTION: " + m);
+      });
+
+      function loadScript(src){
+        return new Promise((resolve, reject) => {
+          const s = document.createElement("script");
+          s.src = src;
+          s.async = false;
+          s.onload = () => resolve(src);
+          s.onerror = () => reject(new Error("load failed: " + src));
+          document.head.appendChild(s);
+        });
+      }
+
+      async function boot(){
+        window.RCF_LOGGER.push("boot", "index boot: starting…");
+        window.RCF_LOGGER.push("boot", "base href = " + document.baseURI);
+
+        // ✅ ordem mínima (sem depender do app.js ainda)
+        const modules = [
+          "./js/core/storage.js",
+          "./js/core/github_sync.js",
+          "./js/core/vfs_overrides.js",
+          "./js/core/mother_selfupdate.js",
+          "./js/admin.github.js"
+        ];
+
+        for (const src of modules) {
+          try {
+            await loadScript(src);
+            window.RCF_LOGGER.push("boot", "module loaded ✅ " + src);
+          } catch (e) {
+            window.RCF_LOGGER.push("warn", "module missing/failed ❌ " + src + " :: " + (e.message||e));
+          }
+        }
+
+        // app principal
+        try {
+          await loadScript("./app.js");
+          window.RCF_LOGGER.push("boot", "app.js loaded ✅ ./app.js");
+        } catch (e) {
+          window.RCF_LOGGER.push("err", "app.js missing/failed ❌ ./app.js :: " + (e.message||e));
+        }
+
+        // SW (scope ./)
+        try {
+          if ("serviceWorker" in navigator) {
+            navigator.serviceWorker.register("./sw.js", { scope: "./" })
+              .then(() => window.RCF_LOGGER.push("boot", "sw register: ok"))
+              .catch((e) => window.RCF_LOGGER.push("warn", "sw register: fail/ignored :: " + (e?.message||e)));
+          }
+        } catch {}
+      }
+
+      boot();
+    })();
   </script>
 </body>
 </html>
