--- a/app/index.html
+++ b/app/index.html
@@ -63,16 +63,23 @@
         } catch {}
       }
 
+      function hidePanel(){
+        try {
+          const pan = document.getElementById("rcfBootPanel");
+          if (pan) pan.style.display = "none";
+        } catch {}
+      }
+
       // botões
       try {
         document.getElementById("rcfReloadBtn").onclick = () => location.reload();
-        document.getElementById("rcfHideBtn").onclick = () => {
-          const pan = document.getElementById("rcfBootPanel");
-          if (pan) pan.style.display = "none";
-        };
+        document.getElementById("rcfHideBtn").onclick = () => hidePanel();
       } catch {}
 
-      // BootPanel logger (não substitui RCF_LOGGER real)
+      // ✅ Auto-hide (evita Safari “tela gigante” no uso normal)
+      // (se der erro, o stability_guard pode renderizar a ErrorScreen mesmo assim)
+      setTimeout(() => hidePanel(), 4500);
+
       bootLog("boot: panel ready");
 
       function loadScript(src){
@@ -90,15 +97,32 @@
         bootLog("BOOT: index boot: starting…");
         bootLog("BOOT: base href = " + document.baseURI);
 
+        // ✅ ORDEM PADRÃO:
+        // 1) logger (pra logar tudo)
+        // 2) stability_guard (pega erro cedo e evita tela branca)
+        // 3) resto da core
         const modules = [
           "./js/core/logger.js",
           "./js/core/stability_guard.js",
+
           "./js/core/storage.js",
           "./js/core/github_sync.js",
           "./js/core/vfs_overrides.js",
           "./js/core/vfs_shim.js",
           "./js/core/mother_selfupdate.js",
-          "./js/admin.github.js"
+
+          "./js/admin.github.js",
+
+          // opcionais (se existirem, não quebra):
+          "./js/core/diagnostics.js",
+          "./js/core/ui_bindings.js",
+          "./js/core/ui_compact_outputs.js",
+          "./js/core/injector.js",
+          "./js/core/policy.js",
+          "./js/core/preview_runner.js",
+          "./js/core/publish_queue.js",
+          "./js/core/registry.js",
+          "./js/core/settings_cleanup.js"
         ];
 
         for (const src of modules) {
@@ -121,6 +145,7 @@
           bootLog("ERR: app.js missing/failed ❌ ./app.js :: " + (e.message||e));
         }
 
+        // SW (mantido igual)
         try {
           if ("serviceWorker" in navigator) {
             navigator.serviceWorker.register("./sw.js", { scope: "./" })
@@ -140,6 +165,5 @@
     })();
   </script>
   <!-- RCF_BOOT_SCRIPT_END -->
-
 </body>
 </html>
