--- a/app/index.html
+++ b/app/index.html
@@ -12,6 +12,7 @@
   <link rel="manifest" href="./manifest.json" />
   <link rel="stylesheet" href="./styles.css" />
 </head>
+
 <body>
   <noscript>Ative o JavaScript para usar o app.</noscript>
 
@@ -28,14 +29,31 @@
     border:1px solid rgba(255,255,255,.10);
     font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, 'Liberation Mono', monospace;
     font-size:12px; line-height:1.35;
-    max-height:36vh; overflow:auto;
-    pointer-events:none;">
+    max-height:34vh; overflow:hidden;
+    pointer-events:none;
+    backdrop-filter: blur(6px);
+    -webkit-backdrop-filter: blur(6px);
+  ">
 
-    <div style="display:flex; gap:8px; align-items:center; margin-bottom:8px;">
-      <div style="font-weight:800;">RCF BOOT</div>
+    <div style="display:flex; gap:8px; align-items:center; margin-bottom:8px; pointer-events:auto;">
+      <div style="font-weight:900; letter-spacing:.2px;">RCF BOOT</div>
+
+      <div id="rcfBootMeta" style="opacity:.85; font-weight:700;">(min)</div>
+
+      <button id="rcfBootExpandBtn" style="
+        margin-left:auto; padding:6px 10px; border-radius:999px;
+        border:1px solid rgba(255,255,255,.15);
+        background:rgba(255,255,255,.08); color:#fff;
+        pointer-events:auto;">Expand</button>
+
+      <button id="rcfBootCopyBtn" style="
+        padding:6px 10px; border-radius:999px;
+        border:1px solid rgba(255,255,255,.15);
+        background:rgba(255,255,255,.08); color:#fff;
+        pointer-events:auto;">Copy</button>
 
       <button id="rcfReloadBtn" style="
-        margin-left:auto; padding:6px 10px; border-radius:999px;
+        padding:6px 10px; border-radius:999px;
         border:1px solid rgba(255,255,255,.15);
         background:rgba(255,255,255,.08); color:#fff;
         pointer-events:auto;">Reload</button>
@@ -47,33 +65,114 @@
         pointer-events:auto;">Hide</button>
     </div>
 
-    <pre id="rcfBootLog" style="margin:0; white-space:pre-wrap;">boot: init…</pre>
+    <pre id="rcfBootLog" style="
+      margin:0;
+      white-space:pre-wrap;
+      overflow:auto;
+      max-height:26vh;
+      padding-right:4px;
+      pointer-events:auto;
+      -webkit-overflow-scrolling:touch;
+    ">boot: init…</pre>
   </div>
   <!-- RCF_BOOT_PANEL_END -->
 
   <!-- RCF_BOOT_SCRIPT_START -->
   <script>
     (function () {
+      const panel = document.getElementById("rcfBootPanel");
       const out = document.getElementById("rcfBootLog");
+      const meta = document.getElementById("rcfBootMeta");
+
+      // --------- config anti “tela gigante” ----------
+      const BOOT_MAX_LINES = 90;     // quantas linhas ficam visíveis no painel
+      const BOOT_MAX_CHARS = 14000;  // limite extra (seguro) em chars
+      let bootLines = ["boot: panel ready"];
+      let isExpanded = false;
+
+      function updateMeta() {
+        try {
+          meta.textContent = isExpanded ? "(exp)" : "(min)";
+        } catch {}
+      }
+
+      function renderBoot() {
+        try {
+          // trim por linhas
+          if (bootLines.length > BOOT_MAX_LINES) {
+            bootLines = bootLines.slice(bootLines.length - BOOT_MAX_LINES);
+            bootLines[0] = "… (tail) … " + bootLines[0];
+          }
+
+          let txt = bootLines.join("\n");
+          // trim por chars (último recurso)
+          if (txt.length > BOOT_MAX_CHARS) {
+            txt = "… (tail chars) …\n" + txt.slice(txt.length - BOOT_MAX_CHARS);
+          }
+
+          out.textContent = txt;
+          if (isExpanded) out.scrollTop = out.scrollHeight;
+        } catch {}
+      }
 
       function bootLog(line){
         try {
-          out.textContent += "\n" + line;
-          out.scrollTop = out.scrollHeight;
+          bootLines.push(String(line || ""));
+          renderBoot();
         } catch {}
+      }
+
+      function setExpanded(on) {
+        isExpanded = !!on;
+        try {
+          if (!panel) return;
+
+          // min = “fit” (não ocupa tela)
+          if (!isExpanded) {
+            panel.style.maxHeight = "70px";
+            panel.style.overflow = "hidden";
+            out.style.maxHeight = "0px";
+            out.style.paddingTop = "0px";
+            out.style.opacity = "0";
+          } else {
+            panel.style.maxHeight = "34vh";
+            panel.style.overflow = "hidden";
+            out.style.maxHeight = "26vh";
+            out.style.opacity = "1";
+          }
+        } catch {}
+        updateMeta();
       }
 
       // botões
       try {
         document.getElementById("rcfReloadBtn").onclick = () => location.reload();
-        document.getElementById("rcfHideBtn").onclick = () => {
-          const pan = document.getElementById("rcfBootPanel");
-          if (pan) pan.style.display = "none";
+        document.getElementById("rcfHideBtn").onclick = () => { if (panel) panel.style.display = "none"; };
+
+        document.getElementById("rcfBootExpandBtn").onclick = () => {
+          setExpanded(!isExpanded);
+          document.getElementById("rcfBootExpandBtn").textContent = isExpanded ? "Minimize" : "Expand";
+          if (isExpanded) { try { out.scrollTop = out.scrollHeight; } catch {} }
+        };
+
+        document.getElementById("rcfBootCopyBtn").onclick = async () => {
+          try {
+            const txt = String(out.textContent || "");
+            if (navigator.clipboard && navigator.clipboard.writeText) {
+              await navigator.clipboard.writeText(txt);
+              bootLog("BOOT: copied ✅");
+            } else {
+              bootLog("BOOT: clipboard indisponível (copie manual)");
+            }
+          } catch {
+            bootLog("BOOT: copy falhou (iOS bloqueou)");
+          }
         };
       } catch {}
 
-      // BootPanel logger (não substitui RCF_LOGGER real)
-      bootLog("boot: panel ready");
+      // start minimizado (pra não ficar horrível)
+      setExpanded(false);
+      renderBoot();
 
       function loadScript(src){
         return new Promise((resolve, reject) => {
@@ -90,7 +189,7 @@
         bootLog("BOOT: index boot: starting…");
         bootLog("BOOT: base href = " + document.baseURI);
 
-        // ✅ ordem segura: logger -> guard -> storage -> GH/VFS/MAE -> cores -> UI -> admin -> app.js
+        // ordem: logger -> stability_guard -> storage -> github/vfs/mae -> core extras -> admin -> app.js
         const modules = [
           "./js/core/logger.js",
           "./js/core/stability_guard.js",
@@ -100,14 +199,12 @@
           "./js/core/vfs_shim.js",
           "./js/core/mother_selfupdate.js",
 
-          // ✅ core (NÃO ficam vazios)
+          // core extras (agora já carregando tudo que você mostrou nos logs)
           "./js/core/errors.js",
           "./js/core/risk.js",
           "./js/core/snapshot.js",
           "./js/core/selfheal.js",
           "./js/core/ui_safety.js",
-
-          // ✅ UI/qualidade de vida (se existirem no repo)
           "./js/core/ui_compact_outputs.js",
           "./js/core/ui_bindings.js",
           "./js/core/diagnostics.js",
@@ -126,22 +223,23 @@
             try { window.RCF_LOGGER?.push?.("BOOT", "module loaded ✅ " + src); } catch {}
             bootLog("BOOT: module loaded ✅ " + src);
           } catch (e) {
-            try { window.RCF_LOGGER?.push?.("WARN", "module missing/failed ❌ " + src + " :: " + (e.message||e)); } catch {}
-            bootLog("WARN: module missing/failed ❌ " + src + " :: " + (e.message||e));
+            const m = (e && e.message) ? e.message : String(e);
+            try { window.RCF_LOGGER?.push?.("WARN", "module missing/failed ❌ " + src + " :: " + m); } catch {}
+            bootLog("WARN: module missing/failed ❌ " + src + " :: " + m);
           }
         }
 
-        // ✅ auto-check no LOGS (sem F12)
+        // sanity log (não quebra se não existir)
         try {
-          const flags = {
+          const ok = {
             RCF_ERRORS: !!window.RCF_ERRORS,
             RCF_RISK: !!window.RCF_RISK,
             RCF_SNAPSHOT: !!window.RCF_SNAPSHOT,
             RCF_SELFHEAL: !!window.RCF_SELFHEAL,
             RCF_UI_SAFETY: !!window.RCF_UI_SAFETY
           };
-          window.RCF_LOGGER?.push?.("INFO", "CORE READY CHECK => " + JSON.stringify(flags));
-          bootLog("INFO: CORE READY CHECK => " + JSON.stringify(flags));
+          try { window.RCF_LOGGER?.push?.("INFO", "CORE READY CHECK => " + JSON.stringify(ok)); } catch {}
+          bootLog("INFO: CORE READY CHECK => " + JSON.stringify(ok));
         } catch {}
 
         try {
@@ -149,8 +247,9 @@
           try { window.RCF_LOGGER?.push?.("BOOT", "app.js loaded ✅ ./app.js"); } catch {}
           bootLog("BOOT: app.js loaded ✅ ./app.js");
         } catch (e) {
-          try { window.RCF_LOGGER?.push?.("ERR", "app.js missing/failed ❌ ./app.js :: " + (e.message||e)); } catch {}
-          bootLog("ERR: app.js missing/failed ❌ ./app.js :: " + (e.message||e));
+          const m = (e && e.message) ? e.message : String(e);
+          try { window.RCF_LOGGER?.push?.("ERR", "app.js missing/failed ❌ ./app.js :: " + m); } catch {}
+          bootLog("ERR: app.js missing/failed ❌ ./app.js :: " + m);
         }
 
         try {
@@ -161,8 +260,9 @@
                 bootLog("BOOT: sw register: ok (scope ./)");
               })
               .catch((e) => {
-                try { window.RCF_LOGGER?.push?.("WARN", "sw register: fail/ignored :: " + (e?.message||e)); } catch {}
-                bootLog("WARN: sw register: fail/ignored :: " + (e?.message||e));
+                const m = (e && e.message) ? e.message : String(e);
+                try { window.RCF_LOGGER?.push?.("WARN", "sw register: fail/ignored :: " + m); } catch {}
+                bootLog("WARN: sw register: fail/ignored :: " + m);
               });
           }
         } catch {}
